# island-shell

./: .gitignore  CMakeLists.txt  DynamicIslandWindow.qml  WallpaperEngine.qml  shell.qml
backend/: StyleTokensBackend.cpp  StyleTokensBackend.h  SystemServices.cpp  SystemServices.h  UserConfigBackend.cpp  UserConfigBackend.h
docs/: fcitx-tray-debugging-notes.md  fix-bar-hover-flicker.md
modules/common/: Appearance.qml  Config.qml  Directories.qml
modules/common/widgets/: AddressBar.qml  CalendarView.qml  ConfigSelectionArray.qml  LightDarkPreferenceButton.qml  NotificationAppIcon.qml  NotificationGroup.qml  NotificationItem.qml  SelectionDialog.qml  SelectionGroupButton.qml
modules/ii/bar/: ActiveWindow.qml  Bar.qml  BarContent.qml  BarGroup.qml  BatteryPopup.qml  ClockWidget.qml  ClockWidgetPopup.qml  LeftSidebarButton.qml  Media.qml  ResourcesPopup.qml  StyledPopup.qml  SysTray.qml  SysTrayMenu.qml
modules/ii/bar/weather/: WeatherBar.qml  WeatherPopup.qml
modules/ii/screenCorners/: ScreenCorners.qml
modules/ii/sidebarLeft/: AiChat.qml  Anime.qml  DescriptionBox.qml  ScrollToBottomButton.qml  SidebarLeft.qml  SidebarLeftContent.qml  Translator.qml
modules/ii/sidebarLeft/aiChat/: AiMessage.qml  MessageCodeBlock.qml  MessageThinkBlock.qml
modules/ii/sidebarLeft/anime/: BooruImage.qml  BooruResponse.qml
modules/ii/sidebarLeft/translator/: TextCanvas.qml
modules/ii/sidebarRight/: BottomWidgetGroup.qml  QuickSliders.qml  SidebarRight.qml  SidebarRightContent.qml
modules/ii/sidebarRight/bluetoothDevices/: BluetoothDeviceItem.qml  BluetoothDialog.qml
modules/ii/sidebarRight/calendar/: CalendarWidget.qml
modules/ii/sidebarRight/nightLight/: NightLightDialog.qml
modules/ii/sidebarRight/notifications/: NotificationList.qml
modules/ii/sidebarRight/pomodoro/: PomodoroTimer.qml  PomodoroWidget.qml  Stopwatch.qml
modules/ii/sidebarRight/quickToggles/androidStyle/: AndroidQuickToggleButton.qml
modules/ii/sidebarRight/quickToggles/classicStyle/: BluetoothToggle.qml  CloudflareWarp.qml  EasyEffectsToggle.qml  GameMode.qml  IdleInhibitor.qml  NetworkToggle.qml  NightLight.qml
modules/ii/sidebarRight/todo/: TodoWidget.qml
modules/ii/sidebarRight/volumeMixer/: AudioDeviceSelectorButton.qml  VolumeDialog.qml  VolumeDialogContent.qml  VolumeMixerEntry.qml
modules/ii/sidebarRight/wifiNetworks/: WifiDialog.qml  WifiNetworkItem.qml
modules/settings/: About.qml  InterfaceConfig.qml
scripts/: restart-qs.sh
services/: Ai.qml  Audio.qml  Battery.qml  Booru.qml  GlobalFocusGrab.qml  KeyringStorage.qml  MaterialThemeLoader.qml  MprisController.qml  Notifications.qml  SystemInfo.qml  Translation.qml
